Add Help Button to the stage

--- a/game2/css/styles.css
+++ b/game2/css/styles.css
@@ -611,3 +611,18 @@ a.pause:hover, a.sound:hover{
 	color:#1ca3a6;
 }
 
+#helpBtn{
+	position: absolute;
+	z-index: 20;
+	display: block;
+	width: 30px;
+	height: 30px;
+	font-size: 30px;
+	color: #333;
+	left: 10px;
+	top: 10px;
+	opacity: 0.6;
+}
+#helpBtn i {
+	float: left;
+}
