--- a/game4/css/styles.css
+++ b/game4/css/styles.css
@@ -105,23 +105,21 @@ body.light{
 
 .round-btn{
 	-webkit-border-radius: 30px;
-	border-radius: 30px;
-
-	display: inline-block;
-	width:150px;
-	height:40px;
-	background-color: #1ca3a6;
-	color:#fff;
-	text-decoration: none;
-
-	display: inline-block;
+    border-radius: 30px;
+    display: inline-block;
+    width: 150px;
+    height: 40px;
+    background-color: #1ca3a6;
+    color: #fff;
+    text-decoration: none;
+    display: inline-block;
     margin-bottom: 0;
     text-align: center;
     vertical-align: middle;
     cursor: pointer;
     white-space: nowrap;
-    padding: 3px 10px 15px 10px;
-    font-size: 20px;
+    padding: 0px 10px 5px 10px;
+    font-size: 16px;
     line-height: 3;
     -webkit-user-select: none;
     -moz-user-select: none;
@@ -134,12 +132,17 @@ body.light{
 .round-btn:hover{
 	background: #188e90;
 }
-.startBtn, #openNewWindow{
+
+.startBtn{
+
+	margin:10px auto;
+}
+#openNewWindow{
 	position: absolute;
 	left:50%;
 	top: 50%;
 	margin-left: -85px;
-	margin-top: -20px;
+	margin-top: 0px;
 }
 
 .continue{
@@ -150,14 +153,20 @@ body.light{
 	margin-top: -100px;
 }
 
+.correct{
+	background-color: #1ca3a6 !important;
+}
+.wrong{
+	background-color: #e10043 !important;
+}
+
 .startTxt{
-	width:calc(100% - 60px);
-	padding:30px;
-	height:100px;
-	position: absolute;
-	left:0;
-	top: 50%;
-	margin-top: -190px;
+	text-align: center;
+    padding: 5px 10px;
+    position: absolute;
+    top: 50%;
+    margin-top: -110px;
+    width: calc(100% - 20px);
 }
 
 .logo{
@@ -501,6 +510,63 @@ a.sound:hover{
 .selected{
 	background-color: #276b6c;
 }
+
+
+#hwToPlay{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: #333 !important;
+	color: #fff;
+	text-align: center;
+	direction: rtl;
+	z-index: 99999;
+	top: 0;
+	left: 0;
+	display: none;
+	overflow: auto;
+}
+#hwToPlay p{
+	padding: 20px;
+}
+#hwToPlay p *, #hwToPlay p, #hwToPlay ol{
+	text-align: right;
+	}
+.green{
+	color:#1ca3a6;
+}
+
+#helpBtn{
+	position: absolute;
+	z-index: 20;
+	display: block;
+	width: 30px;
+	height: 30px;
+	font-size: 30px;
+	color: #fff;
+	right: 10px;
+	top: 5px;
+	opacity: 0.6;
+}
+#helpBtn i {
+	float: left;
+}
+#backBtn{
+	position: absolute;
+	z-index: 20;
+	display: none;
+	width: 30px;
+	height: 30px;
+	font-size: 30px;
+	color: #fff;
+	right: 40px;
+	top: 5px;
+	opacity: 0.6;
+}
+#backBtn i {
+	float: left;
+}
+
 
 
 
