remove model border

--- a/model1/css/styles.css
+++ b/model1/css/styles.css
@@ -58,7 +58,7 @@ body {
 	position:relative;
 	width:640px;
 	height:480px;
-    border: 1px solid #ddd;
+    /*border: 1px solid #ddd;*/
     margin: 0 auto;
 }
 
