--- a/model2/css/styles.css
+++ b/model2/css/styles.css
@@ -114,7 +114,7 @@ body {
     color: #FBB03B;
 }
 
-a.dot{
+.dot{
     display: block;
     position: absolute;
     top: -8px;
@@ -122,15 +122,15 @@ a.dot{
 
 
 
-#dot3{
+#dot3, .anim3{
     left: 80px;
 }
 
-#dot2{
+#dot2, .anim2{
     left: calc(50% - 10px);
 }
 
-#dot1{
+#dot1, .anim1{
     right: 80px;
 }
 
@@ -162,6 +162,58 @@ a.dot{
     transition: opacity 0.5s ease-in-out;
     opacity: 1;
 }
+
+.grow {
+  -webkit-transition:all 0.25s ease-out;
+  -moz-transition:all 0.25s ease-out;
+  -ms-transition:all 0.25s ease-out;
+  -o-transition:all 0.25s ease-out;
+  transition:all 0.25s ease-out;
+}
+
+.grow:hover {
+  -webkit-transform:scale(1.3);
+  -moz-transform:scale(1.3);
+  -ms-transform:scale(1.3);
+  -o-transform:scale(1.3);
+  transform:scale(1.3);
+}
+
+@keyframes leaves {
+    0% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+        opacity:1;
+    }
+    50% {
+        transform: scale(2.0);
+        -webkit-transform: scale(2.0);
+        opacity:0;
+    }
+    100% {
+        transform: scale(1.0);
+        -webkit-transform: scale(1.0);
+        opacity:1;
+    }
+}
+.tip.grow{
+    z-index: 15;
+}
+.anim{
+    z-index: 12;
+    animation: leaves 1.5s ease-in-out infinite alternate;
+    -webkit-animation: leaves 1.5s ease-in-out infinite alternate;
+}
+.anim1{
+
+}
+.anim1{
+
+}
+.anim1{
+
+}
+
 
 .arrow{
     position: absolute;
@@ -217,6 +269,7 @@ a.dot{
     background-color: #cecece;
     top: 160px;
     left: 40px;
+    z-index: 10;
 }
 
 
